L125 -> L128 Completed main menu and exit program. Restored ingame mouse control. Added TankPlayerController and Tank class

--- a/BatlleTank/BatlleTank.uproject
+++ b/BatlleTank/BatlleTank.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "BatlleTank",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
